--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "build:gh": "cross-env VITE_PROJECT_NAME=vue-dapp-template vite build",
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist",
+    "deploy:gh": "npm run build:gh && npm run deploy"
   },
   "dependencies": {
     "@ethersproject/abi": "^5.8.0",
@@ -20,6 +23,8 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
+    "cross-env": "^7.0.3",
+    "gh-pages": "^6.3.0",
     "unplugin-vue-components": "^28.7.0",
     "vite": "^6.3.5"
   }
